<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".urlShortener.presentation.ui.activity.UrlShortenerActivity">

    <LinearLayout
        android:id="@+id/linearLayout_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginEnd="@dimen/dimen_20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_url"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:layout_gravity="center_vertical">

            <EditText
                android:id="@+id/editText_uri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/url"
                android:inputType="textUri"
                android:autofillHints="no"
                android:layout_gravity="center_vertical"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_shorUrl"
            android:layout_width="@dimen/dimen_40dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_swap"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView_recent_shortened_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:textStyle="bold"
        android:textSize="@dimen/dimen_20sp"
        android:text="@string/recent_url"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_recentUrls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginEnd="@dimen/dimen_20dp"/>

    <ProgressBar
        android:id="@+id/progressBar_loader"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible"
        android:layout_gravity="center"/>

</LinearLayout>